...
            "value": "Lukk"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Close"
          }
        },
        "da": {
          "stringUnit": {
            "state": "translated",
            "value": "Luk"
...
            "value": "Tillat"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Allow"
          }
        },
        "da": {
          "stringUnit": {
            "state": "translated",
            "value": "Tillad"
...
